--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/style.css" />
+
     <title>{{page.title}}</title>
+
+            <!-- title for SEO and browser tabs -->
+            <title> The Bunker Hotel Sydney</title>
+
+            <!-- Viewport meta tag -->
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+            <!-- Google Font Raleway -->
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    
+            <!-- Font awsome stylesheet -->
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
+            <!-- Gridlex style sheet -->
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.7.1/gridlex.min.css">
+    
+            <!-- My costum style sheet -->
+            <link rel="stylesheet" href="/style.css">
 
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
