--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,9 @@
             <link rel="stylesheet" href="/style.css">
 
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <!-- custom JS -->
+    <script type="text/javascript" src="scripts.js"></script>
+    
 </head>
 
 <body>
